--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
-    "dev": "bun run ./index.ts",
+    "dev": "bun --hot run index.ts",
+    "start": "ts-node --esm ./index.ts",
     "make:migration": "node --loader ts-node/esm ./node_modules/.bin/knex --knexfile ./src/config/knexfile.ts migrate:make",
     "db:migrate": "node -r dotenv/config --loader ts-node/esm ./node_modules/.bin/knex --knexfile ./src/config/knexfile.ts migrate:latest",
     "make:seeder": "node --loader ts-node/esm ./node_modules/.bin/knex --knexfile ./src/config/knexfile.ts seed:make",
@@ -12,8 +13,10 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/cors": "^2.8.17",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9",
     "pg": "^8.12.0"
   },
   "peerDependencies": {
@@ -26,10 +29,12 @@
     "@types/swagger-ui-express": "^4.1.6",
     "@types/uuid": "^10.0.0",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
+    "morgan": "^1.10.0",
     "pino": "^9.3.2",
     "pino-pretty": "^11.2.2",
     "swagger-jsdoc": "^6.2.8",
