--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ version: '3.7'
 
 services:
   app:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: example-api:latest
+    env_file:
+      - .env
     ports:
       - 8000:8000
